refazendo metodos do controller e do service na classe Amenity